force-app/main/default/objects/Linked_Content__c/Linked_Content__c.object-meta.xml
<CustomObject>
    <label>Linked Content</label>
    <nameField>
        <displayFormat>LCI-{00000000}</displayFormat>
        <label>Linked Content ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>