force-app/main/default/objects/Linked_Content__c/fields/Content_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_ID__c</fullName>
    <label>Content ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>