force-app/main/default/objects/Linked_Content__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <label>Object ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>